--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -58,8 +58,21 @@ deploy)
         -L ~/devel/ext/nonguix/ \
         ~/.dotfiles/guix/system.scm
     ;;
+
+gc)
+    ./pre-inst-env guix gc -d
+    ;;
+
+,*)
+  if [ "$1" == "" ]; then
+      echo "compile|home|system|deploy|gc"
+  else
+      ./pre-inst-env guix $@
+  fi
+  ;;
 esac
 #+end_src
+
 * doom
 ** init.el
 #+begin_src elisp :tangle init.el
